--- a/pages/projects.html
+++ b/pages/projects.html
@@ -271,6 +271,16 @@
 
         </div> <!-- Row closing div -->
 
+        <div class="container-fluid">
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Need help with your project?</h5>
+            <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
+                <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
+                    href="../pages/about.html" class="btn btn-secondary">About</a>
+                <a id='buttonContact' onclick="buttonEffect('buttonContact')"
+                    href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
+            </div>
+        </div>
+
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
