title array quotes

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete[projects]</title>
+    <title>codeByPete['projects']</title>
 </head>
 
 <body>
@@ -275,7 +275,7 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Need help with your project?</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/about.html" class="btn btn-secondary">About</a>
+                    href="../pages/about.html" class="btn btn-secondary btnRepo">About</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
                     href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
             </div>
