--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="../css/about.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete[about]</title>
+    <title>codeByPete['about']</title>
 </head>
 
 <body>
