--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete[contact]</title>
+    <title>codeByPete['contact']</title>
 </head>
 
 <body>
