--- a/pages/resume.html
+++ b/pages/resume.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="../css/typewriter_sIL.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete[resume]</title>
+    <title>codeByPete['resume']</title>
 </head>
 
 <body>
