--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="../css/welcome.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <title>codeByPete[welcome]</title>
+    <title>codeByPete['welcome']</title>
 </head>
 
 <body>
