--- a/pages/projects.html
+++ b/pages/projects.html
@@ -82,7 +82,7 @@
                             href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
                         <a id='busTrackerRepo' onclick="buttonEffect('busTrackerRepo')"
-                            href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo "
+                            href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnDark "
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                             href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
                         <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')"
-                            href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
+                            href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnDark "
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                             href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
                         <a id='pacManFactoryRepo' onclick="buttonEffect('pacManFactoryRepo')"
-                            href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
+                            href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnDark "
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                             target="_blank">Play
                             Game</a>
                         <a id='pacManMiniGameRepo' onclick="buttonEffect('pacManMiniGameRepo')"
-                            href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
+                            href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnDark "
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                         <a id='lmnoPhotoDemo' onclick="buttonEffect('lmnoPhotoDemo')" href="https://www.lmnophoto.biz/"
                             class="btn btn-secondary" target="_blank">Visit Site</a>
                         <a id='lmnoPhotoRepo' onclick="buttonEffect('lmnoPhotoRepo')"
-                            href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
+                            href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnDark"
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                             target="_blank">Try
                             Demo</a>
                         <a id='jsCalcRepo' onclick="buttonEffect('jsCalcRepo')"
-                            href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
+                            href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnDark"
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                             href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
                         <a id='etchASketchRepo' onclick="buttonEffect('etchASketchRepo')"
-                            href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
+                            href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnDark"
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                             target="'_blank">Play Game</a>
                         <a id='rockPaperScissorsRepo' onclick="buttonEffect('rockPaperScissorsRepo')"
                             href="https://github.com/codeTrackLift/rock-paper-scissors"
-                            class="btn btn-secondary btnRepo" target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
+                            class="btn btn-secondary btnDark" target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                             href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
                             target="'_blank">Visit Site</a>
                         <a id='odinLandingpageRepo' onclick="buttonEffect('odinLandingpageRepo')"
-                            href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
+                            href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnDark"
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Need help with your project?</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/about.html" class="btn btn-secondary btnRepo">About</a>
+                    href="../pages/about.html" class="btn btn-secondary btnDark">About</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
                     href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
             </div>
