--- a/pages/about.html
+++ b/pages/about.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typewriter_cTL.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/about.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
@@ -135,9 +136,9 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center">Demo projects, see my progression. Need help with your project?</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/projects.html" class="btn btn-secondary">Projects</a>
+                    href="../pages/projects.html" class="btn btn-secondary btnDark">Projects</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary btnRepo">Contact</a>
+                    href="../pages/contact.html" class="btn btn-secondary">Contact</a>
             </div>
         </div>
 
