--- a/pages/about.html
+++ b/pages/about.html
@@ -132,7 +132,7 @@
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div id='bottomNav' class="container-fluid">
             <h5 class="menloRegular text-silver textShadowBlack text-center">Demo projects, see my progression. Need help with your project?</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
