--- a/pages/projects.html
+++ b/pages/projects.html
@@ -271,7 +271,7 @@
 
         </div> <!-- Row closing div -->
 
-        <div class="container-fluid">
+        <div id='bottomNav' class="container-fluid">
             <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Need help with your project?</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
