--- a/pages/projects.html
+++ b/pages/projects.html
@@ -272,12 +272,12 @@
         </div> <!-- Row closing div -->
 
         <div id='bottomNav' class="container-fluid">
-            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Need help with your project?</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Read blog articles about my Coding Bootcamp experience.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
                     href="../pages/about.html" class="btn btn-secondary btnDark">About</a>
-                <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
+                <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
+                    href="../pages/blog.html" class="btn btn-secondary ">My Blog</a>
             </div>
         </div>
 
