--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typewriter_cTL.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
@@ -134,6 +135,16 @@
                             class='btn btn-secondary text-center'>Send Message</button>
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <div id='bottomNav' class="container-fluid mt-5">
+            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Read blog articles about my Coding Bootcamp experience.  Demo projects, see my progression.</h5>
+            <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
+                <a id='buttonBlog' onclick="buttonEffect('buttonProjects')"
+                    href="../pages/blog.html" class="btn btn-secondary btnDark">My Blog</a>
+                <a id='buttonProjects' onclick="buttonEffect('buttonContact')"
+                    href="../pages/projects.html" class="btn btn-secondary ">Projects</a>
             </div>
         </div>
 
