--- a/pages/about.html
+++ b/pages/about.html
@@ -133,12 +133,12 @@
         </div>
 
         <div id='bottomNav' class="container-fluid">
-            <h5 class="menloRegular text-silver textShadowBlack text-center">Demo projects, see my progression. Need help with your project?</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Need help with your project? Read blog articles about my Coding Bootcamp experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
-                <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/projects.html" class="btn btn-secondary btnDark">Projects</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary">Contact</a>
+                    href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
+                <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
+                    href="../pages/blog.html" class="btn btn-secondary">My Blog</a>
             </div>
         </div>
 
