--- a/pages/contact.html
+++ b/pages/contact.html
@@ -139,12 +139,12 @@
         </div>
 
         <div id='bottomNav' class="container-fluid mt-5">
-            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Read blog articles about my Coding Bootcamp experience.  Demo projects, see my progression.</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Demo projects and see my progression, or learn more about me.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
-                <a id='buttonBlog' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/blog.html" class="btn btn-secondary btnDark">My Blog</a>
-                <a id='buttonProjects' onclick="buttonEffect('buttonContact')"
-                    href="../pages/projects.html" class="btn btn-secondary ">Projects</a>
+                <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
+                    href="../pages/projects.html" class="btn btn-secondary btnDark">Projects</a>
+                <a id='buttonAbout' onclick="buttonEffect('buttonAbout')"
+                    href="../pages/about.html" class="btn btn-secondary">About Me</a>
             </div>
         </div>
 
