--- a/pages/blog.html
+++ b/pages/blog.html
@@ -950,12 +950,12 @@
         </div> <!-- myBlog closing div -->
 
         <div id='bottomNav' class="container-fluid mt-5">
-            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me. Need help with your project?</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me, or demo my projects and see my progression.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
                     href="../pages/about.html" class="btn btn-secondary btnDark">About</a>
-                <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
+                <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
+                    href="../pages/projects.html" class="btn btn-secondary ">Projects</a>
             </div>
         </div>
 
