bottom nav btn refine

--- a/pages/about.html
+++ b/pages/about.html
@@ -133,10 +133,10 @@
         </div>
 
         <div id='bottomNav' class="container-fluid">
-            <h5 class="menloRegular text-silver textShadowBlack text-center">Need help with your project? Read blog articles about my Coding Bootcamp experience.</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center"><span class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
+                    href="../pages/contact.html" class="btn btn-secondary btnDark">Contact Me</a>
                 <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
                     href="../pages/blog.html" class="btn btn-secondary">My Blog</a>
             </div>
