--- a/pages/projects.html
+++ b/pages/projects.html
@@ -272,12 +272,12 @@
         </div> <!-- Row closing div -->
 
         <div id='bottomNav' class="container-fluid">
-            <h5 class="menloRegular text-silver textShadowBlack text-center">Read blog articles about my Coding Bootcamp experience. Need help with your project?</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Read blog articles about my Coding Bootcamp experience. <span class="text-white">Need help with a project?</span></h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
                     href="../pages/blog.html" class="btn btn-secondary btnDark">My Blog</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
+                    href="../pages/contact.html" class="btn btn-secondary ">Contact Me</a>
             </div>
         </div>
 
