--- a/pages/blog.html
+++ b/pages/blog.html
@@ -953,7 +953,7 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me, or demo my projects and see my progression.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/about.html" class="btn btn-secondary btnDark">About</a>
+                    href="../pages/about.html" class="btn btn-secondary btnDark">About Me</a>
                 <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
                     href="../pages/projects.html" class="btn btn-secondary ">Projects</a>
             </div>
