contact btn wordsm revert

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -277,7 +277,7 @@
                 <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
                     href="../pages/blog.html" class="btn btn-secondary btnDark">My Blog</a>
                 <a id='buttonContact' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/contact.html" class="btn btn-secondary ">Contact Me</a>
+                    href="../pages/contact.html" class="btn btn-secondary ">Contact</a>
             </div>
         </div>
 
