--- a/pages/about.html
+++ b/pages/about.html
@@ -136,7 +136,7 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center"><span class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary btnDark">Contact Me</a>
+                    href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
                 <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
                     href="../pages/blog.html" class="btn btn-secondary">My Blog</a>
             </div>
