proj card wordsm

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -253,10 +253,9 @@
                             href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations
                         course.
                     </p>
-                    <p class="card-text">This was made using vanilla HTML and CSS after completing the <a
-                            href="https://www.freecodecamp.org/learn/responsive-web-design/" target="_blank">Responsive
+                    <p class="card-text">This was made using vanilla HTML and CSS after completing the Responsive
                             Web
-                            Design</a> course at <a href="https://www.freecodecamp.org/"
+                            Design course at <a href="https://www.freecodecamp.org/"
                             target="_blank">freeCodeCamp.org</a>.</p>
                     <div class="btnContainer">
                         <a id='odinLandingpageDemo' onclick="buttonEffect('odinLandingpageDemo')"
