--- a/pages/resume.html
+++ b/pages/resume.html
@@ -34,6 +34,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/resume.css">
     <link rel="stylesheet" href="../css/typewriter_sIL.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
@@ -322,15 +323,57 @@
             </ul>
         </div>
 
+        <div id='bottomNav' class="container-fluid mt-5">
+            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Demo
+                projects and see my progression. <span class="text-white">Need help with a project?</span></h5>
+            <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
+                <a id='buttonProjects' onclick="buttonEffect('buttonProjects')" href="../pages/projects.html"
+                    class="btn btn-secondary btnDark">Projects</a>
+                <a id='buttonContact' onclick="buttonEffect('buttonProjects')" href="../pages/contact.html"
+                    class="btn btn-secondary ">Contact</a>
+            </div>
+        </div>
+
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Pharmaceutical experience
+                        drives my Good Documentation Practices (GDPs)."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
+                                style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time
+                        to understand the problem before proposing a solution."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
+                                style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+                <div class="carousel-item">
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are
+                        planned before implementation, and tested before release."</h3>
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
+                                style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                    </figcaption>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
+    <script src="../libraries/ScrollMagic.min.js"></script>
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
+    <script src="../js/resume.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
