--- a/pages/about.html
+++ b/pages/about.html
@@ -133,7 +133,7 @@
         </div>
 
         <div id='bottomNav' class="container-fluid">
-            <h5 class="menloRegular text-silver textShadowBlack text-center"><span class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp experience.</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width: 640px;"><span class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonContact' onclick="buttonEffect('buttonContact')"
                     href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
@@ -145,7 +145,7 @@
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"If something is important to you, I would encourage you to pursue it relentlessly."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"If something is truly important to you, pursue it relentlessly."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
