--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -113,6 +113,7 @@
         setTimeout(initScrollMagic, 3100);
         setTimeout(unhideCarousel, 3100);
         setTimeout(injectMyFooter, 3000);
+        setTimeout(footerBackground, 3100);
     </script>
 </body>
 
