car pb-3 2nd rem

--- a/pages/about.html
+++ b/pages/about.html
@@ -151,7 +151,7 @@
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack pb-3" style="font-style:italic;">"I am a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I am a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
