--- a/pages/blog.html
+++ b/pages/blog.html
@@ -974,7 +974,7 @@
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I spent 20 years pursuing 'success,' the next 20 will be spent pursuing a passion."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"A frustrating experience is a progression opportunity waiting to be reframed."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
