--- a/pages/blog.html
+++ b/pages/blog.html
@@ -968,13 +968,13 @@
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I am a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I'm a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"A frustrating experience is a progression opportunity waiting to be reframed."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"A frustrating experience can be reframed into a progression opportunity."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
