botnav txtwhite span add

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -950,7 +950,7 @@
         </div> <!-- myBlog closing div -->
 
         <div id='bottomNav' class="container-fluid mt-5">
-            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more about me, or demo my projects and see my progression.</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center">Learn more <span class="text-white">about me</span>, or <span class="text-white">demo projects</span> and see my progression.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonAbout' onclick="buttonEffect('buttonProjects')"
                     href="../pages/about.html" class="btn btn-secondary btnDark">About Me</a>
