--- a/pages/contact.html
+++ b/pages/contact.html
@@ -139,7 +139,7 @@
         </div>
 
         <div id='bottomNav' class="container-fluid mt-5">
-            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Demo projects and see my progression, or learn more about me.</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;"><span class="text-white">Demo projects</span> and see my progression, or learn more <span class="text-white">about me</span>.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonProjects' onclick="buttonEffect('buttonProjects')"
                     href="../pages/projects.html" class="btn btn-secondary btnDark">Projects</a>
