--- a/pages/resume.html
+++ b/pages/resume.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-sm-4 text-center my-2">
                     <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif"
-                            class=' img-fluid py-1 img-round text-center mx-auto mb-3'
+                            class=' img-fluid imgWhiteBg py-1 img-round text-center mx-auto mb-3'
                             alt="University of Delware Shield Logo."></a>
                     <h5 class="menloRegular">Bachelor's Degree</h5>
                     <h6><a href="https://www.bio.udel.edu/" target="_blank">Biological Sciences</a></h6>
@@ -116,9 +116,9 @@
         <div id='techStack' class="myArticles container-fluid">
             <h1 class="text-center mb-4">Technology Stack</h1>
             <div class="row">
-                <img src="../pics/about/html5_logo.gif" class='col-sm-2 img-fluid img-round' alt="HTML5 Logo.">
-                <img src="../pics/about/css3_logo.gif" class='col-sm-2 img-fluid img-round' alt="CSS3 Logo.">
-                <img src="../pics/about/javascript_logo.gif" class='col-sm-2 img-fluid img-round'
+                <img src="../pics/about/html5_logo.gif" class='col-sm-2 imgWhiteBg  img-fluid img-round' alt="HTML5 Logo.">
+                <img src="../pics/about/css3_logo.gif" class='col-sm-2 imgWhiteBg  img-fluid img-round' alt="CSS3 Logo.">
+                <img src="../pics/about/javascript_logo.gif" class='col-sm-2 imgWhiteBg  img-fluid img-round'
                     alt="JavaScript Logo.">
             </div>
             <div class="row">
@@ -169,6 +169,12 @@
                 <li>Search Engine Optimization (SEO), Google Lighthouse and Analytics.</li>
                 <li>Test Driven Development (TDD), as applicable.</li>
             </ul>
+        </div>
+
+        <div class="container-fluid text-center" style="max-width:640px;">
+            <h3 class="text-silver textShadowBlack fst-italic">Pharmaceuticals is serious business, but we knew how to have fun too!</h3>
+            <img id='yodaJim' src="../pics/about/yodaJim.jpg" class="img-fluid my-4" alt="Yoda Jim.">
+            <p class="textShadowBlack">Meet one of my mentors, "<span class="fst-italic">Yoda Jim</span>" <span class="text-gray">(and a sampling of my Photoshop work)</span>.</p>
         </div>
 
         <div class="container-fluid myArticles">
