--- a/pages/resume.html
+++ b/pages/resume.html
@@ -172,7 +172,7 @@
         </div>
 
         <div class="container-fluid text-center" style="max-width:640px;">
-            <h3 class="text-silver textShadowBlack fst-italic">Pharmaceuticals is serious business, but we knew how to have fun too!</h3>
+            <h3 class="text-silver textShadowBlack fst-italic">Pharmaceuticals was serious business, but we knew how to have fun too!</h3>
             <img id='yodaJim' src="../pics/about/yodaJim.jpg" class="img-fluid my-4" alt="Yoda Jim.">
             <p class="textShadowBlack">Meet one of my mentors, "<span class="fst-italic">Yoda Jim</span>" <span class="text-gray">(and a sampling of my Photoshop work)</span>.</p>
         </div>
