--- a/pages/about.html
+++ b/pages/about.html
@@ -89,10 +89,25 @@
             </div>
         </div>
 
-        <div id='githubContributions' class="container-fluid text-center">
+        <!-- <div id='githubContributions' class="container-fluid text-center">
             <a href="https://github.com/codeTrackLift" target="_blank">
-                <img src="../pics/about/githubContributions.png" alt="GitHub contribution">
+                <img src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
             </a>
+        </div> -->
+
+        <div id='githubContributions' class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <a href="https://github.com/codeTrackLift" target="_blank">
+                        <img src="../pics/about/githubContributions_100Days.jpg" class='img-fluid w-100 h-100' alt="GitHub contribution">
+                    </a>
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <a href="https://github.com/codeTrackLift" target="_blank">
+                        <img src="../pics/about/githubContributions.png" class='img-fluid w-100 h-100' alt="GitHub contribution">
+                    </a>
+                </div>
+            </div>
         </div>
 
         <div id="personal" class="myArticles container-fluid">
@@ -133,33 +148,41 @@
         </div>
 
         <div id='bottomNav' class="container-fluid">
-            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width: 640px;"><span class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp experience.</h5>
+            <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width: 640px;"><span
+                    class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp
+                experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
-                <a id='buttonContact' onclick="buttonEffect('buttonContact')"
-                    href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
-                <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
-                    href="../pages/blog.html" class="btn btn-secondary">My Blog</a>
+                <a id='buttonContact' onclick="buttonEffect('buttonContact')" href="../pages/contact.html"
+                    class="btn btn-secondary btnDark">Contact</a>
+                <a id='buttonBlog' onclick="buttonEffect('buttonBlog')" href="../pages/blog.html"
+                    class="btn btn-secondary">My Blog</a>
             </div>
         </div>
 
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"If something is truly important to you, pursue it relentlessly."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"If something is truly
+                        important to you, pursue it relentlessly."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
+                                style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I'm a fast learner, if I had a 'super-power' it would be the ability to focus."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"I'm a fast learner, if I had
+                        a 'super-power' it would be the ability to focus."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
+                                style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
                 <div class="carousel-item">
-                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"A frustrating experience can be reframed into a progression opportunity."</h3>
+                    <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"A frustrating experience can
+                        be reframed into a progression opportunity."</h3>
                     <figcaption class="blockquote-footer text-end mt-3 mx-5">
-                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
+                        <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
+                                style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
                 </div>
             </div>
