about carousel sizing

--- a/pages/about.html
+++ b/pages/about.html
@@ -89,22 +89,16 @@
             </div>
         </div>
 
-        <!-- <div id='githubContributions' class="container-fluid text-center">
-            <a href="https://github.com/codeTrackLift" target="_blank">
-                <img src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
-            </a>
-        </div> -->
-
-        <div id='githubContributions' class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id='githubContributions' class="my-5 carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
+                <div class="carousel-item active" data-bs-interval="5000">
                     <a href="https://github.com/codeTrackLift" target="_blank">
-                        <img src="../pics/about/githubContributions_100Days.jpg" class='img-fluid w-100 h-100' alt="GitHub contribution">
+                        <img src="../pics/about/githubContributions_100Days.jpg" class='img-fluid h-100' style="width: 90%" alt="GitHub contribution">
                     </a>
                 </div>
-                <div class="carousel-item" data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="5000">
                     <a href="https://github.com/codeTrackLift" target="_blank">
-                        <img src="../pics/about/githubContributions.png" class='img-fluid w-100 h-100' alt="GitHub contribution">
+                        <img src="../pics/about/githubContributions.png" class='img-fluid h-100' style="width: 90%" alt="GitHub contribution">
                     </a>
                 </div>
             </div>
