--- a/pages/resume.html
+++ b/pages/resume.html
@@ -61,6 +61,12 @@
             </figure>
         </section>
 
+        <section class="container-fluid w-100 text-center">
+            <a href="../pics/resumeByPete.pdf" download>
+                <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid' alt="Download cloud icon">
+            </a>
+        </section>
+
         <div id="education" class="myArticles container-fluid">
             <h1 class="text-center">Education</h1>
             <div class="row m-auto">
