--- a/pages/resume.html
+++ b/pages/resume.html
@@ -63,7 +63,8 @@
 
         <section class="container-fluid w-100 text-center">
             <a href="../pics/resumeByPete.pdf" download>
-                <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid' alt="Download cloud icon">
+                <span class="textShadowBlack text-silver fst-italic">resume<span style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
+                <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow' alt="Download cloud icon">
             </a>
         </section>
 
