--- a/pages/resume.html
+++ b/pages/resume.html
@@ -135,6 +135,11 @@
                     alt="Visual Studio Code Logo.">
                 <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-2 img-fluid img-square'
                     alt="Bootstrap Logo.">
+                <img src="../pics/about/jest_logo.gif" class='py-3 col-sm-2 img-fluid img-square'
+                    alt="Jest Logo.">
+            </div>
+            <div class="container-fluid text-center my-4">
+                <img class='img-fluid' src="../pics/about/mernStackTrans.png" style='width:30rem;' alt="Mongo DB Express NodeJS ReactJS technology stack.">
             </div>
         </div>
 
