resBP align end

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -61,11 +61,11 @@
             </figure>
         </section>
 
-        <section class="container-fluid w-100 text-center">
-            <a href="../pics/resumeByPete.pdf" download>
-                <span class="textShadowBlack text-silver fst-italic">resume<span style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
-                <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow' alt="Download cloud icon">
-            </a>
+        <section class="container-fluid text-end mt-4 w-75" style="max-width: 900px">
+                <a href="../pics/resumeByPete.pdf" download>
+                    <span class="textShadowBlack text-white fst-italic opacity-50">resume<span style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
+                    <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow' alt="Download cloud icon">
+                </a>
         </section>
 
         <div id="education" class="myArticles container-fluid">
