--- a/pages/about.html
+++ b/pages/about.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg"
                     alt="Core Nutritionals sticker on a glowing Apple logo.">
-                <p class="col-sm-11 text-end">Best Regards,<br>Pete Chu</p>
+                <p class="col-sm-11 text-end">Best Regards,<br>Pete Chu, BA</p>
             </div>
         </div>
 
