--- a/pages/about.html
+++ b/pages/about.html
@@ -146,10 +146,8 @@
                     class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp
                 experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
-                <a id='buttonContact' onclick="buttonEffect('buttonContact')" href="../pages/contact.html"
-                    class="btn btn-secondary btnDark">Contact</a>
-                <a id='buttonBlog' onclick="buttonEffect('buttonBlog')" href="../pages/blog.html"
-                    class="btn btn-secondary">My Blog</a>
+                <a id='buttonContact' href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
+                <a id='buttonBlog' href="../pages/blog.html" class="btn btn-secondary">My Blog</a>
             </div>
         </div>
 
@@ -193,7 +191,6 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/footer.js"></script>
-    <script src="../js/cards.js"></script>
     <script src="../js/about.js"></script>
     <script>
         injectMyNavbar();
