--- a/pages/resume.html
+++ b/pages/resume.html
@@ -345,9 +345,9 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Demo
                 projects and see my progression. <span class="text-white">Need help with a project?</span></h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
-                <a id='buttonProjects' onclick="buttonEffect('buttonProjects')" href="../pages/projects.html"
+                <a id='buttonProjects' href="../pages/projects.html"
                     class="btn btn-secondary btnDark">Projects</a>
-                <a id='buttonContact' onclick="buttonEffect('buttonProjects')" href="../pages/contact.html"
+                <a id='buttonContact' href="../pages/contact.html"
                     class="btn btn-secondary ">Contact</a>
             </div>
         </div>
