--- a/pages/contact.html
+++ b/pages/contact.html
@@ -141,10 +141,8 @@
         <div id='bottomNav' class="container-fluid mt-5">
             <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">See my <span class="text-white">education</span> and <span class='text-white'>experience</span>, or learn more <span class="text-white">about me</span>.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
-                <a id='buttonResume' onclick="buttonEffect('buttonResume')"
-                    href="../pages/resume.html" class="btn btn-secondary btnDark">Resume</a>
-                <a id='buttonAbout' onclick="buttonEffect('buttonAbout')"
-                    href="../pages/about.html" class="btn btn-secondary">About Me</a>
+                <a id='buttonResume' href="../pages/resume.html" class="btn btn-secondary btnDark">Resume</a>
+                <a id='buttonAbout' href="../pages/about.html" class="btn btn-secondary">About Me</a>
             </div>
         </div>
 
