--- a/pages/projects.html
+++ b/pages/projects.html
@@ -273,10 +273,8 @@
         <div id='bottomNav' class="container-fluid">
             <h5 class="menloRegular text-silver textShadowBlack text-center">Read blog articles, or see my <span class="text-white">education</span> and work <span class="text-white">experience</span>.</h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
-                <a id='buttonBlog' onclick="buttonEffect('buttonBlog')"
-                    href="../pages/blog.html" class="btn btn-secondary btnDark">My Blog</a>
-                <a id='buttonContact' onclick="buttonEffect('buttonProjects')"
-                    href="../pages/resume.html" class="btn btn-secondary ">Resume</a>
+                <a id='buttonBlog' href="../pages/blog.html" class="btn btn-secondary btnDark">My Blog</a>
+                <a id='buttonContact' href="../pages/resume.html" class="btn btn-secondary ">Resume</a>
             </div>
         </div>
 
