--- a/pages/about.html
+++ b/pages/about.html
@@ -146,7 +146,7 @@
                     class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp
                 experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
-                <a id='buttonContact' href="../pages/contact.html" class="btn btn-secondary btnDark">Contact</a>
+                <a id='buttonContact' href="../pages/contact.html" class="btn btn-secondary btnDark">Contact Me</a>
                 <a id='buttonBlog' href="../pages/blog.html" class="btn btn-secondary">My Blog</a>
             </div>
         </div>
