--- a/pages/resume.html
+++ b/pages/resume.html
@@ -348,7 +348,7 @@
                 <a id='buttonProjects' href="../pages/projects.html"
                     class="btn btn-secondary btnDark">Projects</a>
                 <a id='buttonContact' href="../pages/contact.html"
-                    class="btn btn-secondary ">Contact</a>
+                    class="btn btn-secondary ">Contact Me</a>
             </div>
         </div>
 
